--- a/quiz/templates/home.html
+++ b/quiz/templates/home.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <title>Quiz Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <h1>Welcome to the Quiz!</h1>
-    <a href="{% url 'quiz' %}">Start Quiz</a>
+<body class="container text-center py-5">
+    <h1 class="mb-4">Welcome to the Django Quiz App!</h1>
+    <a href="{% url 'quiz' %}" class="btn btn-success btn-lg">Start Quiz</a>
 </body>
 </html>
