--- a/quiz/templates/quiz.html
+++ b/quiz/templates/quiz.html
@@ -2,19 +2,14 @@
 <html>
 <head>
     <title>Quiz</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <h1>Answer the Questions:</h1>
+<body class="container py-5">
+    <h1 class="mb-4">Answer the Questions:</h1>
     <form method="post">
         {% csrf_token %}
-        {% for question in questions %}
-            <p><strong>{{ question.question_text }}</strong></p>
-            <label><input type="radio" name="{{ question.id }}" value="1"> {{ question.option1 }}</label><br>
-            <label><input type="radio" name="{{ question.id }}" value="2"> {{ question.option2 }}</label><br>
-            <label><input type="radio" name="{{ question.id }}" value="3"> {{ question.option3 }}</label><br>
-            <label><input type="radio" name="{{ question.id }}" value="4"> {{ question.option4 }}</label><br><br>
-        {% endfor %}
-        <button type="submit">Submit Quiz</button>
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-primary mt-3">Submit Quiz</button>
     </form>
 </body>
 </html>
