--- a/quiz/templates/quizzes_by_subject.html
+++ b/quiz/templates/quizzes_by_subject.html
@@ -10,7 +10,8 @@
     {% for quiz in quizzes %}
       <li class="list-group-item d-flex justify-content-between align-items-center">
         {{ quiz.title }}
-        <a href="#" class="btn btn-sm btn-primary">Take Quiz</a>
+        <a href="{% url 'take_quiz' quiz.id %}" class="btn btn-sm btn-primary">Take Quiz</a>
+
       </li>
     {% endfor %}
   </ul>
